# AirAtlas

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  LICENSE-DATA  README.md  SOURCES.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  data_accuracy.md  feature_or_idea.md
.github/workflows/: backfill-drip.yml  ci.yml  deploy.yml  refresh-daily.yml  refresh-hourly.yml  remedian-drip.yml  uptime.yml
data/history/: agartala.parquet  agra.parquet  ahmedabad.parquet  ahmednagar.parquet  aizawl.parquet  (+278 more)
docs/: 2026-06-07-india-aqi-weather-dashboard-build-plan.md  HANDOFF.md  SETUP.md
pipeline/: build.py  checks.py  plan.py  pyproject.toml  run.py  test_build.py  test_checks.py  test_plan.py
pipeline/aqi/: __init__.py  breakpoints.py  compute.py  test_compute.py
pipeline/config/: city_aliases.json
pipeline/ingest/: __init__.py  cpcb.py  http.py  openaq.py  openmeteo.py  records.py  test_cpcb.py  test_http.py  test_openaq.py  test_openmeteo.py  test_records.py
pipeline/ingest/fixtures/cpcb/: live_sample.json
pipeline/ingest/fixtures/openaq/: location_17_sensors.json  locations_in.json  sensor_days.json  sensor_hours.json
pipeline/ingest/fixtures/openmeteo/: archive_daily.json  forecast.json
pipeline/scripts/: validate_rollup.py
pipeline/transform/: __init__.py  aggregate.py  citymap.py  reconcile.py  storage.py  test_aggregate.py  test_citymap.py  test_reconcile.py  test_storage.py
scripts/: smoke.mjs
web/: .prettierignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
(+562 files in other folders)
