[project]
name = "airatlas-pipeline"
version = "0.1.0"
description = "Data pipeline for AirAtlas: fetch → compute AQI → aggregate → reconcile → publish."
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "polars>=1.0",
    "pyarrow>=16.0",
    "duckdb>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["aqi", "ingest", "transform"]

[tool.pytest.ini_options]
testpaths = ["aqi", "ingest", "transform", "test_checks.py", "test_build.py", "test_plan.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
